fix(ui): reset styled select button on safari browser

--- a/public/global.css
+++ b/public/global.css
@@ -57,6 +57,9 @@ textarea {
   /* reset default setting */
   margin-block-end: 0px;
   margin-block-start: 0px;
+  
+  /* reset appearance on safari */
+  -webkit-appearance: unset;
 }
 
 input:disabled {
